basic PageComponent functionality, mock PageService

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -1,3 +1,6 @@
 <!-- Web pages that aren't blog posts -->
 <!-- Also serves as 404 page -->
-<p>page works!</p>
+@if (page) {
+    <h1>{{page.title}}</h1>
+    {{page.slug}}
+}
