--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -2,7 +2,5 @@
 <!-- Also serves as 404 page -->
 @if (page) {
     <h1>{{page.title}}</h1>
-    @for(content of page.body; track content.toString()) {
-        <content-renderer [content]="content"></content-renderer>
-    }
+    <content-renderer [content]="page.body"></content-renderer>
 }
