add HttpClient config, post service, posts page implementation

--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,2 +1,6 @@
 <!-- A list of blog posts, paginated -->
 <p>posts works!</p>
+
+@for (blog of blogs; track blog.id) {
+    <h1>{{blog.title}}</h1>
+}
