configure post by slug endpoint in FE, plus implementation

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,2 +1,4 @@
-<!-- A singular blog post -->
-<p>post works!</p>
+<div *ngIf="post$ | async as postObj">
+<h1>{{postObj.title}}</h1>
+<p>{{postObj.content}}</p>
+</div>
