--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -2,5 +2,5 @@
 <p>posts works!</p>
 
 @for (blog of blogs; track blog.id) {
-    <h1>{{blog.title}}</h1>
+    <h1><a [href]="'blog/' + blog.slug">{{blog.title}}</a></h1>
 }
